css/styles.css
/* GLOBAL */

body {
    color: var(--font-one);
    background-color: var(--background);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    margin: 0;
}

h2,
a,
h3,
p,
label,
button,
.scroll-button,
.form-error,
.formSuccess,
textarea,
input {
    font-family: var(--text-main);
}

h1,
h5 {
    font-family: var(--text-other);
}

h1 {
    font-weight: lighter;
    font-size: 30px;
}

h3,
h2 {
    font-size: 20px;
}

h2 {
    font-weight: 200;
    text-align: center;
    padding: 2% 0%;
}

p,
button,
a,
label {
    font-size: 16px;
}

button {
    font-weight: 500;
}

img {
    border-radius: 3px;
}

.page-wrapper,
.contact-wrapper {
    margin: 5% 10%;
}

/* NAV */


.nav-container,
.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

.navbar {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 2;
    height: 88px;
    background-color: var(--background);
    padding: 0 10%;
}

.logo {
    max-height: 45px;
    max-width: 300px;
}

a {
    text-decoration: none;
    display: block;
    color: var(--font-one);
}

.active-link {
    text-decoration: underline;
}

.fa,
.fa-solid {
    color: white;
    padding: 10px;
}
  
  
.nav-menu ul {
    display: flex;
    list-style: none;
}
  
.nav-menu li {
    margin: 0px 20px;
    display: inline-block;
    flex-grow: 1;
}


.hamburger {
    display: none;
    cursor: pointer;
}

.bar {
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: var(--font-one);
}

.dark-underlay {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1;
    background-color: rgba(61, 61, 61, 0.4);
    display: none;
}

.show-underlay {
    display: block;
}


/* LOADER */

.loader {
    width: 80px;
    height: 80px;
    background-color: var(--third);
    animation-duration: 2s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation: rotatingCircle 2.4s infinite;
    border-radius: 50%;
    display: block;
    justify-self: center;
    position: absolute;
  }
  

@keyframes rotatingCircle {
    0%, 100% {
      animation-timing-function: cubic-bezier(0.23, 1, 0.30, 1);
    }
    0% {
      transform: rotateY(0deg);
    }
    50% {
      transform: rotateY(500deg);
      animation-timing-function: cubic-bezier(0.23, 1, 0.30, 1);
      background-color: var(--secondary);
    }
    100% {
      transform: rotateY(1080deg); 
      background-color: var(--third);
    }
}

/* MODAL */

.modal-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: none;
    justify-content: center;
    align-items: center;
    z-index: 9999;
}
  
.modal-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    cursor: pointer;
    backdrop-filter: blur(2px);
}
  
.modal-image {
    max-width: 80%;
    max-height: 80%;
    object-fit: contain;
    z-index: 1;
}

/* HER0 */

.hero::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(61, 61, 61, 0.7);
  }

.hero,
.hero-secondary,
.hero-third {
    background: url("../images/japandi2.jpg");
    background-color: var(--font-one);
    background-size: cover;
    background-repeat: no-repeat;
    min-height: 400px;
    color: var(--primary);
    position: relative;
    background-position-y: center;
    margin-top: 85px; 
}


.hero-secondary,
.hero-third {
    min-height: 200px;
    background: var(--third);   
}

.hero-third {
    background: var(--secondary);   
}

.hero-text {
    position: relative;
    color: var(--primary);
    font-weight: lighter;
    width: 70%;
    text-align: center;
    top: 100%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0;
    animation: fade-in 0.9s cubic-bezier(0.3, 0, 0.2, 1) forwards;
}
  
@keyframes fade-in {
    0% {
      top: 100%;
      opacity: 0;
    }
    40% {
      opacity: 0;
    }
    80% {
        opacity: 0.4;
      }
    100% {
      top: 50%;
      opacity: 1;
    }
}
   

.hero-secondary h1,
.hero-third h1 {
    color: var(--font-one);
}

/* CAROUSEL */

.result-carousel {
    display: flex;
    flex-wrap: wrap;
    position: relative;
    justify-content: center;
    align-items: center;
}
  
.result-carousel .post {
    width: 100%;
}

.content-carousel {
    display: flex;
    transition: transform 0.3s ease-in-out;
}

.carousel-buttons {
    display: contents;
}

.scroll-button {
    background-color: var(--background);
    border: none;
    display: inline-flex;
    align-items: center;
    padding: 10px 20px;
    width: auto;
}

.scroll-button i {
    margin: 5px;
}

.scroll-button.left {
    margin-right: auto;
}

.scroll-button.right {
    margin-left: auto;
}

/* SEARCH BAR */

#searchContainer {
    display: flex;
    justify-content: end;
    align-items: baseline;
    gap: 1%;
    margin: 10px 0px 20px 0px;
}

#searchButton {
    justify-self: flex-end;
}

#searchInput {
    max-width: 50%;
    height: fit-content;
    border: 0.8px;
    border-style: solid;
}

/* RESULTS */

.result {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    overflow: hidden;
    grid-gap: 25px;
}

.card {
    max-width: 100%;
    max-height: fit-content;
    background-color: var(--primary);
    position: relative;
}

.card-img {
    height: 200px;
}

.card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}
  

.text-container {
    padding: 2% 5%;
    position: relative;
    height: 280px;
}

.read-link {
    position: absolute;
    right: 5%;
    bottom: 4%;
}

/* INDEX */

.cta-wrapper {
    display: flex;
    flex-direction: column;
    padding: 2% 5%;
    background: var(--third);
}
  
.cta-img img {
    width: 100%;
    object-fit: cover;
    height: 200px;
    object-position: 0px -28px;
}

.page-wrapper + .page-wrapper {
    border-top: 1px solid #000;
    padding-top: 5%;
  }


/* SPECIFIC POST */

.specific-result {
    display: inline-flex;
    margin-top: 2%;
    justify-content: center;
    width: 100%;
  }

.specific-result img {
    max-width: 100%;
    max-height: 50%;
    object-fit: cover;
    margin-left: 5%;
    margin-bottom: 15%;
}

.specific-result h2 {
    text-align: start;
}

.post-text-container {
    width: 300%;
}

.view-more {
    display: flex;
    justify-content: center;
}

.gallery-container {
    margin-top: 10%;
}


/* CONTACT */

.contact-wrapper {
    color: var(--font-one);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.contact-wrapper h1 {
    font-weight: lighter;
    text-align: center;
    text-transform: uppercase;
}

.contact-wrapper p {
    text-align: center;
    max-width: 70%;
}


form {
    padding: 3% 10%;
    margin-top: 2%;
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 0.7px;
    border-color: var(--font-one);
    border-style: solid;
}

.form-error,
.formSuccess {
    display: none;
}

.formSuccess {
    width: 70%;
    align-self: center;
}

button {
    background: var(--primary);
    color: var(--font-one);
    width: 150px;
    padding: 8px;
    margin-top: 20px;
    text-transform: uppercase;
    border: 1px;
    border-style: solid;
    border-color: var(--text-other);
}

form h1,
label {
    color: var(--font-one);
}

input,
textarea {
    width: 100%;
    padding: 5px;
    margin-top: 1%;
    font-size: 16px;
    border: 1px;
    border-radius: 3px;
    border-style: groove;
}

.form-error {
    color: var(--error);
    margin-top: 2px;
    font-size: 16px;
    display: none;
}

.input-container {
    margin-top: 20px;
    width: 100%;
}

textarea {
    width: 100%; 
    height: 150px; 
    resize: vertical;
    border: 0.7px;
    border-radius: 3px;
    border-style: groove;
}


/* FOOTER */


footer {
    background-color: var(--secondary);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: 5%;
    width: 100%;
    bottom: 0;
    max-height: 260px;
}

.footer-links a:not(:first-child),
.footer-icons a:not(:first-child) {
    margin-left: 50px;
  }

.footer-links,
.footer-icons {
    display: inline-flex;
    justify-content: space-between;
    margin-top: 5%;
}
  
.footer-icons {
    margin: 5% 0 7% 0;
}


/* ABOUT */ 

.main-cont {
    overflow: hidden;
    display: flex;
    gap: 35px;
}

.txt-cont p,
.person-cont p {
    text-align: start;
    max-width: 100%;
}

.person-cont p {
    max-width: 50%;
}

.img-cont img,
.person-cont img {
    height: 200px;
    object-fit: cover;
}

.person-cont img {
    width: 320px;
}

.break {
    background-color: var(--third);
    padding: 2% 10%;
    margin: 2% 0;
    text-align: center;
    opacity: 0;
    transform: translateY(20px);
    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
}

.break.visible {
    opacity: 1;
    transform: translateY(0);
}

.main-person-cont {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
}

.person-cont {
    display: inline-flex;
    max-height: 300px;
    gap: 35px;
}

/* ERROR */

.error-message {
    font-family: var(--text-other);
    font-weight: bold;
    font-size: larger;
    color: var(--error);
    text-align: center;
    display: block;
}

/* Hover effects */

.card:hover,
.logo:hover,
button:hover,
a:hover,
.specific-result img:hover  {
    cursor: pointer;
}

.card:hover img {
    opacity: 0.7;
  }

.logo:hover {
    filter:opacity(0.7);
}

button:hover,
.card:hover {
    background-color: var(--secondary);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

